# mk-penguin-classifier

./: .gitignore  README.md  docker-compose.yml
data/raw_db/: synthetic_penguins_dataset.csv
mlflow/: Dockerfile
notebooks/: full_EDA.ipynb
training_container/: Dockerfile  README.md  pyproject.toml  run_training.py
training_container/data/preprocessed_db/: penguins_processed.db
training_container/tests/: test_data_management.py  test_preprocess.py
training_container/training_logic/: __init__.py  config.py  data_management.py  ml_controller.py  preprocess.py
ui_inference_container/: Dockerfile  README.md  pyproject.toml  supervisord.conf
ui_inference_container/tests/: test_simple_api.py
ui_inference_container/ui_app/: __init__.py  api.py  app.py  config.py  inference_service.py
ui_inference_container/ui_app/assets/: custom.css
